--- a/Updatepassword.html
+++ b/Updatepassword.html
@@ -1,6 +1,6 @@
  <div class="container"  ng-controller="RegistrationController as registration">
      <div class="row">
-    <h3>change your password Here </h3>
+    <h3>change your password there </h3>
 
     <form name="registrationForm" novalidate 
           ng-submit="validate(registrationForm.$valid)">
